--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^2.1.0"
+    "puppeteer": "^2.1.0",
+    "yargs": "^15.1.0"
   }
 }
